# marl

./: pyproject.toml
drl_algos/: __init__.py  algorithm.py  buffers.py  drl_utils.py  evaluater.py  mappo.py  trainer.py
environments/: __init__.py  simple_spread.py
scripts/: __init__.py  config.py  evaluate_spread.py  evaluate_spread.sh  train_spread.py  train_spread.sh
