[tool.poetry]
name = "marl"
version = "0.1.0"
description = ""
authors = ["ryuji-hashimoto0110"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
opencv-python = "^4.8.0"
torch = ">=2.0.0, !=2.0.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
pytest = "^7.3.1"
gym = "^0.26.2"
pandas = "^2.1.1"
pettingzoo = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
