[tool.poetry]
name = "marl"
version = "0.1.0"
description = ""
authors = ["ryuji-hashimoto0110"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
opencv-python = "^4.8.1.78"
torch = "^2.1.0"
gym = "^0.26.2"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
pytest = "^7.4.2"
pandas = "^2.1.1"
pettingzoo = "^1.24.1"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
